@@ -1,6 +1,9 @@
 Changes in version 3.17.4
 
 - Add `transformIntensity` method.
+- Fix issue when calling `chromPeakSpectra` or `featureSpectra` on an object
+  that contains also files with only MS1 spectra
+  (https://github.com/sneumann/xcms/issues/603).
 
 Changes in version 3.17.3
 
